--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="socials">
         <a href="https://www.instagram.com/jozart.art/" target="_blank">Instagram</a>
         <a href="https://www.tiktok.com/@soy_joseph972" target="_blank">TikTok</a>
-        <a href="https://www.youtube.com/@Soy_joseph972" target="_blank">YouTube</a>
+        <a href="https://www.youtube.com/@Jozart_x" target="_blank">YouTube</a>
     </div>
 </header>
 
@@ -117,3 +117,4 @@
 
 </body>
 </html>
+
