--- a/portfolio.html
+++ b/portfolio.html
@@ -1,123 +1,163 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Mis Renders</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #0f0f14;
-            color: white;
-            text-align: center;
-        }
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #0f0f14;
+      color: white;
+      text-align: center;
+    }
 
-        header {
-            padding: 30px;
-        }
+    header {
+      padding: 20px;
+    }
 
-        header h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 15px;
+      padding: 20px;
+    }
 
-        header p {
-            color: #aaa;
-        }
+    .gallery img {
+      width: 100%;
+      border-radius: 15px;
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
 
-        .socials a {
-            display: inline-block;
-            margin: 10px;
-            padding: 10px 18px;
-            background: #1f1f2e;
-            color: white;
-            text-decoration: none;
-            border-radius: 10px;
-            transition: 0.2s;
-        }
+    .gallery img:hover {
+      transform: scale(1.05);
+    }
 
-        .socials a:hover {
-            background: #6c63ff;
-        }
+    #vista-render {
+      display: none;
+      padding: 20px;
+    }
 
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 15px;
-            padding: 20px;
-        }
+    .btn-atras {
+      background: #22c55e;
+      border: none;
+      color: white;
+      padding: 10px 18px;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-bottom: 20px;
+    }
 
-        .gallery img {
-            width: 100%;
-            border-radius: 15px;
-            cursor: pointer;
-            transition: transform 0.2s;
-        }
+    .detalle {
+      display: flex;
+      gap: 25px;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+    }
 
-        .gallery img:hover {
-            transform: scale(1.05);
-        }
+    .detalle img {
+      max-width: 420px;
+      border-radius: 15px;
+    }
 
-        footer {
-            padding: 20px;
-            color: #666;
-        }
-    </style>
+    .info {
+      max-width: 320px;
+      text-align: left;
+    }
+
+    .miniaturas {
+      display: flex;
+      gap: 10px;
+      overflow-x: auto;
+      margin-top: 25px;
+    }
+
+    .miniaturas img {
+      width: 90px;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 
 <body>
 
 <header>
-    <h1>✨ Mis Renders ✨</h1>
-    <p>Blender · Minecraft · Arte 3D</p>
-
-    <div class="socials">
-        <a href="https://www.instagram.com/jozart.art/" target="_blank">Instagram</a>
-        <a href="https://www.tiktok.com/@soy_joseph972" target="_blank">TikTok</a>
-        <a href="https://www.youtube.com/@Jozart_x" target="_blank">YouTube</a>
-    </div>
+  <h1>🎨 Portfolio</h1>
 </header>
 
-<h2 class="section-title">🏆 Invitaciones</h2>
-<section class="gallery">
-    <img src="participante 1.png">
-    <img src="participante 4.png">
-    <img src="participante 7.png">
-    <img src="participante 8.png">
+<!-- GALERÍA -->
+<section id="portfolio" class="gallery">
+  <img src="render1.png" onclick="abrirRender(0)">
+  <img src="render2.png" onclick="abrirRender(1)">
+  <img src="render3.png" onclick="abrirRender(2)">
+  <img src="render4.png" onclick="abrirRender(3)">
 </section>
 
-<h2 class="section-title">🏆 Invitaciones</h2>
-<section class="gallery">
-    <img src="Jugador 2..png">
-    <img src="Jugador 4..png">
-    <img src="Jugador 11..png">
-    <img src="Jugador 14..png">
+<!-- VISTA DETALLE -->
+<section id="vista-render">
+
+  <button class="btn-atras" onclick="volver()">⬅ Atrás</button>
+
+  <div class="detalle">
+    <img id="imagenGrande" src="">
+    <div class="info">
+      <h2 id="titulo"></h2>
+      <p id="descripcion"></p>
+    </div>
+  </div>
+
+  <div class="miniaturas">
+    <img src="render1.png" onclick="abrirRender(0)">
+    <img src="render2.png" onclick="abrirRender(1)">
+    <img src="render3.png" onclick="abrirRender(2)">
+    <img src="render4.png" onclick="abrirRender(3)">
+  </div>
+
 </section>
 
-<h2 class="section-title">🎬 Miniaturas</h2>
-<section class="gallery">
-    <img src="jospeh detective miniatura.png">
-    <img src="peak mini final.png">
-    <img src="peak wsa final.png">
-    <img src="fuega cubecraft detalles.png">
-</section>
+<script>
+const renders = [
+  {
+    img: "render1.png",
+    titulo: "Render 1",
+    desc: "Hecho en Blender · Estilo cinemático"
+  },
+  {
+    img: "render2.png",
+    titulo: "Render 2",
+    desc: "Minecraft · Iluminación suave"
+  },
+  {
+    img: "render3.png",
+    titulo: "Render 3",
+    desc: "Ambiente oscuro · Render dramático"
+  },
+  {
+    img: "render4.png",
+    titulo: "Render 4",
+    desc: "Arte 3D · Postprocesado"
+  }
+];
 
-<h2 class="section-title">🔥 Especiales</h2>
-<section class="gallery">
-    <img src="tuenyyy f.png">
-    <img src="tuenyyy.png">
-    <img src="wazvii encadenado.png">
-</section>
+function abrirRender(i) {
+  document.getElementById("portfolio").style.display = "none";
+  document.getElementById("vista-render").style.display = "block";
 
-<footer>
-    © 2026 · Jozart-
-</footer>
+  imagenGrande.src = renders[i].img;
+  titulo.innerText = renders[i].titulo;
+  descripcion.innerText = renders[i].desc;
+}
+
+function volver() {
+  document.getElementById("vista-render").style.display = "none";
+  document.getElementById("portfolio").style.display = "grid";
+}
+</script>
 
 </body>
 </html>
-
-
-
-
