intentado arreglar Update portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -154,7 +154,7 @@
 <section class="gallery">
     <img src="tuenyyy f.png" data-titulo="Especial" data-desc="Render especial con efectos.">
     <img src="tuenyyy.png" data-titulo="Especial" data-desc="Versión alternativa del render.">
-    <img src="wazvii encadenado.png" data-titulo="Especial" data-desc="Ambiente oscuro y dramático.">
+    <img src="wazvii encadenado lus mas intensa.png" data-titulo="Especial" data-desc="Ambiente oscuro y dramático.">
 </section>
 
 <footer>
@@ -205,5 +205,6 @@ document.querySelectorAll(".gallery img").forEach(img => {
 
 </body>
 </html>
+
 
 
