--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,8 @@ header p{color:#aaa}
     width:100%;
     border-radius:15px;
     cursor:pointer;
+    /* Lazy load */
+    loading: lazy;
 }
 
 footer{padding:20px;color:#666}
@@ -67,6 +69,7 @@ footer{padding:20px;color:#666}
     display:flex;
     gap:20px;
     padding:20px;
+    position:relative;
 }
 .modal-left{
     position:relative;
@@ -100,6 +103,24 @@ footer{padding:20px;color:#666}
     cursor:pointer;
     font-weight:bold;
 }
+
+/* ===== FLECHAS ===== */
+.modal-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 3em;
+    color: white;
+    cursor: pointer;
+    user-select: none;
+    padding: 10px;
+    background: rgba(0,0,0,0.3);
+    border-radius: 50%;
+    transition: background .2s;
+}
+.modal-arrow:hover { background: rgba(0,0,0,0.6); }
+.modal-arrow.left { left: 10px; }
+.modal-arrow.right { right: 10px; }
 </style>
 </head>
 
@@ -167,6 +188,11 @@ footer{padding:20px;color:#666}
         <p id="modal-desc"></p>
         <div class="back-btn" onclick="closeModal()">⬅ Atrás</div>
     </div>
+
+    <!-- FLECHAS -->
+    <div class="modal-arrow left" onclick="prevImage()">&#10094;</div>
+    <div class="modal-arrow right" onclick="nextImage()">&#10095;</div>
+
 </div>
 </div>
 
@@ -177,18 +203,26 @@ const modalDesc=document.getElementById("modal-desc");
 const lens=document.getElementById("lens");
 const zoom=2;
 
-document.querySelectorAll(".gallery img").forEach(img=>{
-    img.onclick=()=>{
-        modal.style.display="flex";
-        modalImg.src=img.src;
-        modalDesc.textContent=img.dataset.desc;
-        lens.style.backgroundImage=`url(${img.src})`;
-    }
+// ===== IMÁGENES =====
+const allImages = Array.from(document.querySelectorAll(".gallery img"));
+let currentIndex = 0;
+
+function openModal(index){
+    const img = allImages[index];
+    modal.style.display="flex";
+    modalImg.src=img.src;
+    modalDesc.textContent = img.dataset.desc;
+    lens.style.backgroundImage = `url(${img.src})`;
+    currentIndex = index;
+}
+
+allImages.forEach((img,i)=>{
+    img.onclick=()=>openModal(i);
 });
 
+// ===== ZOOM =====
 modalImg.onload=()=>{
-    lens.style.backgroundSize=
-        modalImg.width*zoom+"px "+modalImg.height*zoom+"px";
+    lens.style.backgroundSize = modalImg.width*zoom + "px " + modalImg.height*zoom + "px";
 };
 
 modalImg.onmousemove=e=>{
@@ -198,10 +232,8 @@ modalImg.onmousemove=e=>{
 
     if(x<0)x=0;
     if(y<0)y=0;
-    if(x>modalImg.width-lens.offsetWidth)
-        x=modalImg.width-lens.offsetWidth;
-    if(y>modalImg.height-lens.offsetHeight)
-        y=modalImg.height-lens.offsetHeight;
+    if(x>modalImg.width-lens.offsetWidth) x=modalImg.width-lens.offsetWidth;
+    if(y>modalImg.height-lens.offsetHeight) y=modalImg.height-lens.offsetHeight;
 
     lens.style.left=x+"px";
     lens.style.top=y+"px";
@@ -210,7 +242,25 @@ modalImg.onmousemove=e=>{
 };
 
 modalImg.onmouseleave=()=>lens.style.display="none";
-function closeModal(){modal.style.display="none"}
+
+// ===== FLECHAS =====
+function prevImage(){
+    currentIndex = (currentIndex - 1 + allImages.length) % allImages.length;
+    openModal(currentIndex);
+}
+
+function nextImage(){
+    currentIndex = (currentIndex + 1) % allImages.length;
+    openModal(currentIndex);
+}
+
+// ===== CERRAR MODAL =====
+function closeModal(){ modal.style.display="none"; }
+
+// ===== CERRAR CON ESC =====
+document.addEventListener("keydown", e=>{
+    if(e.key==="Escape") closeModal();
+});
 </script>
 
 </body>
